WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119496
REGRESSION (
r153060
?): Microphone appears in the way of text when dictating an e-mail
https://bugs.webkit.org/show_bug.cgi?id=119496
Summary
REGRESSION (r153060?): Microphone appears in the way of text when dictating a...
Alexey Proskuryakov
Reported
2013-08-05 14:33:13 PDT
Steps to reproduce: 1. In Blot, or another WebKit1 application, type a line of text, then press Enter. 2. With insertion point at the beginning of line,invoke dictation. Results: dictation popover covers the text you have. <
rdar://problem/14637103
>
Attachments
proposed fix
(5.84 KB, patch)
2013-08-05 14:45 PDT
,
Alexey Proskuryakov
rniwa
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-08-05 14:45:00 PDT
Created
attachment 208150
[details]
proposed fix
Ryosuke Niwa
Comment 2
2013-08-05 14:47:33 PDT
Comment on
attachment 208150
[details]
proposed fix View in context:
https://bugs.webkit.org/attachment.cgi?id=208150&action=review
Seems sensible.
> Source/WebCore/ChangeLog:3 > + <
rdar://problem/14637103
> REGRESSION (
r153060
?): Microphone appears in the way
You should put <
rdar://problem/14637103
> on a separate line below the bugzilla URL.
Alexey Proskuryakov
Comment 3
2013-08-05 14:53:31 PDT
So what happened was that the rect remained null as originally set: FloatRect result; for (size_t i = 0; i < quads.size(); ++i) result.unite(quads[i].boundingBox()); The unite() call does nothing when appending an empty rect, but we want to return the empty caret rect, not the initial null one! We also don't want the initial null rect as part of the result, which would happen if I simply changed unite() to uniteEvenIfEmpty().
Alexey Proskuryakov
Comment 4
2013-08-05 14:55:10 PDT
Committed <
http://trac.webkit.org/r153725
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug